[gd_scene load_steps=2 format=3 uid="uid://dewhbtsqe5akk"]

[ext_resource type="Script" path="res://game.gd" id="1_qsjcv"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qsjcv")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 415.0
offset_top = 251.0
offset_right = 715.0
offset_bottom = 351.0
text = "Klikk"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 90.0
offset_right = 520.0
offset_bottom = 113.0
scale = Vector2(3.75803, 3.75803)

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 264.0
offset_top = 10.0
offset_right = 304.0
offset_bottom = 33.0
scale = Vector2(2.46759, 2.17144)

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
scale = Vector2(2.92, 2.92)
text = "Highscore:"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 417.0
offset_top = 388.0
offset_right = 717.0
offset_bottom = 488.0
text = "Automatiser"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
